Lesson 4: Домашнее задание (Массивы: задачи 3,5,6,7)

--- a/.gitignore
+++ b/.gitignore
@@ -208,6 +208,11 @@ project.lock.json
 
 # Visual Studio Code
 .vscode/
+# Oder
+.m4a
+.txt
+.zip
+.conf
 
 # Output folder used by Webpack or other FE stuff
 **/node_modules/*
