--- a/Курсовой проект/Cinema/Cinema.csproj
+++ b/Курсовой проект/Cinema/Cinema.csproj
@@ -12,7 +12,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Remove="Views\Account\Comment.cshtml" />
     <Content Remove="Views\Shared\CssPartial.razor" />
     <Content Remove="wwwroot\js\JavaScript.js" />
   </ItemGroup>
@@ -33,22 +32,11 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="7.0.8" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.8" />
+    <PackageReference Include="xunit.extensibility.core" Version="2.5.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Migrations\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <UpToDateCheckInput Remove="Views\Account\Comment.cshtml" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <_ContentIncludedByDefault Remove="Views\Account\Comment.cshtml" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="Views\Account\Comment.cshtml" />
   </ItemGroup>
 
 </Project>
